--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "framer-motion": "^5",
+    "mongoose": "^6.1.8",
     "next": "12.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
