--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "axios": "^0.25.0",
+    "dotenv": "^16.0.0",
     "framer-motion": "^5",
-    "mongoose": "^6.1.8",
+    "mongoose": "^6.2.1",
     "next": "12.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
+    "@types/mongoose": "^5.11.97",
     "@types/node": "17.0.10",
     "@types/react": "17.0.38",
     "eslint": "8.7.0",
